chore(project): 프로젝트 설정 변경